Fixed: Removed visibility in start-game-button & gave div a id of start game container in html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -166,7 +166,7 @@ footer {
 }
 
 /* -------------------------------------------------- Styling start game button */
-.start-game-button {
+#start-game-button {
     margin: 2rem;
     font-size: 5rem;
     border: none;
